# NOI

./: .gitignore  README.md
.NOI/: app.json  appearance.json  canvas.json  community-plugins.json  daily-notes.json  workspace.json
.NOI/plugins/obsidian-icon-folder/: data.json
.NOI/plugins/obsidian-style-settings/: data.json  main.js
.NOI/plugins/tasks-calendar-wrapper/: data.json
Algorithm/雪花算法/: 雪花算法的逻辑.md
Algorithm/雪花算法/Snowflake/: Cargo.toml
Backend/Rust/0.Rust 基本问题/: 1.Rust 换源.md
Backend/Rust/1.Rust 基础入门/: 1.1 变量的绑定和解构.md
Backend/Rust/1.Rust 基础入门/1.2 基本类型/: 1.2.1 数值类型.md
Blog/Security/Nmap/: nmap美化.md
Daily/: 2024-03-11.md
Devops/Basic/Linux/: 2.常见的系统基础设置.md
Devops/Basic/Linux/2.网络配置/: 1.设置IP为固定IP.md  2.添加网路路由.md
Devops/Basic/Linux/磁盘配置/: 1.LVM磁盘格式化以及挂载.md
Devops/Basic/Nginx/笔记/: 2.Location配置文件详解.md  6.Nginx常见问题处理.md
Devops/Basic/Nginx/配置文件/: nginx.conf
Devops/Basic/Shell/Config/: init-server.sh
Devops/Basic/Shell/配置文件/: init-server.sh
Devops/CI&CD/Github Action/Config/: hexo-github-actions.yml
Devops/Others/Logrotate/: 1.Logrotate日志切割.md
Devops/Others/xshell/: xshell关键字高亮配置.hls
Devops/Security/Nginx/: 默认的Nginx Http服务器设置漏洞.md
Devops/Systemd/: nginx.service
Reading/Java架构师笔记/1.基础篇/: 1.高并发系统的设计方法.md  2.为什么要做架构分层.md  3.提高系统性能.md
Rust/1.Rust 基础入门/: 1.1 变量的绑定和解构.md
TMP/JenkinsShell/: java-project.sh  php-project.sh
TMP/Nginx/: $01-expose-proxy-nginx.conf  $02-cors-nginx.conf  $03-project-with-upsteam-nginx.conf
TMP/resty/resty/: redis_pool.lua
TechFrontier/MLops/: 1.MLops介绍.md
Todo/: Jenkins.md
(+37 files in other folders)
